fix(styles.css): reduce horizontal padding for about us section on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -606,6 +606,12 @@ section {
   }
 }
 
+@media (max-width: 576px) {
+  .about .icon-boxes {
+    padding: 2.5rem 1rem 1rem 1rem;
+  }
+}
+
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
